--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "shared-resize-observer",
+  "name": "@internetarchive/shared-resize-observer",
   "version": "0.0.0",
   "description": "Webcomponent shared-resize-observer following open-wc recommendations",
   "author": "shared-resize-observer",
   "license": "MIT",
   "main": "dist/index.js",
   "module": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "start": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wds\"",
     "build": "tsc",
@@ -20,20 +24,22 @@
     "lit-element": "^2.2.1"
   },
   "devDependencies": {
-    "@web/dev-server": "^0.1.1",
-    "concurrently": "^5.3.0",
-    "typescript": "^4.1.3",
-    "tslib": "^2.0.3",
-    "eslint": "^6.1.0",
     "@open-wc/eslint-config": "^4.2.0",
-    "@typescript-eslint/parser": "^2.20.0",
+    "@open-wc/testing": "^2.0.0",
+    "@types/mocha": "^8.2.0",
+    "@types/resize-observer-browser": "^0.1.4",
     "@typescript-eslint/eslint-plugin": "^2.20.0",
-    "prettier": "^2.0.4",
+    "@typescript-eslint/parser": "^2.20.0",
+    "@web/dev-server": "^0.1.1",
+    "@web/test-runner": "^0.11.5",
+    "concurrently": "^5.3.0",
+    "eslint": "^6.1.0",
     "eslint-config-prettier": "^6.11.0",
     "husky": "^1.0.0",
     "lint-staged": "^10.0.0",
-    "@web/test-runner": "^0.11.5",
-    "@open-wc/testing": "^2.0.0"
+    "prettier": "^2.0.4",
+    "tslib": "^2.0.3",
+    "typescript": "^4.1.3"
   },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
