--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "@internetarchive/shared-resize-observer",
   "version": "0.0.0",
   "description": "Webcomponent shared-resize-observer following open-wc recommendations",
-  "author": "shared-resize-observer",
-  "license": "MIT",
+  "license": "AGPL-3.0-only",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
