--- a/package.json
+++ b/package.json
@@ -18,10 +18,7 @@
     "test": "tsc && wtr --coverage",
     "test:watch": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wtr --watch\""
   },
-  "dependencies": {
-    "lit-html": "^1.1.2",
-    "lit-element": "^2.2.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@internetarchive/icon-audio": "^1.1.3",
     "@internetarchive/icon-donate": "^1.1.3",
@@ -46,6 +43,8 @@
     "eslint-config-prettier": "^6.11.0",
     "husky": "^1.0.0",
     "lint-staged": "^10.0.0",
+    "lit-element": "^2.4.0",
+    "lit-html": "^1.3.0",
     "prettier": "^2.0.4",
     "tslib": "^2.0.3",
     "typescript": "^4.1.3"
