--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@internetarchive/shared-resize-observer",
   "version": "0.0.0",
-  "description": "A shared ResizeObserver to allow for efficient viewport resize observations",
+  "description": "A shared ResizeObserver to allow for efficient element resize observations",
   "license": "AGPL-3.0-only",
   "main": "dist/index.js",
   "module": "dist/index.js",
