--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "test": "tsc && wtr --coverage",
     "test:watch": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wtr --watch\""
   },
-  "dependencies": {},
+  "dependencies": {
+    "@juggle/resize-observer": "^3.3.0"
+  },
   "devDependencies": {
     "@internetarchive/icon-audio": "^1.1.3",
     "@internetarchive/icon-donate": "^1.1.3",
