--- a/package.json
+++ b/package.json
@@ -1,39 +1,57 @@
 {
-  "name": "shared-resize-observer",
+  "name": "@internetarchive/shared-resize-observer",
   "version": "0.0.0",
-  "description": "Webcomponent shared-resize-observer following open-wc recommendations",
-  "author": "shared-resize-observer",
-  "license": "MIT",
+  "description": "A shared ResizeObserver to allow for efficient element resize observations",
+  "license": "AGPL-3.0-only",
   "main": "dist/index.js",
   "module": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "start": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wds\"",
     "build": "tsc",
-    "prepublish": "tsc",
+    "docs": "typedoc index.ts",
+    "prepare": "npm run build",
     "lint": "eslint --ext .ts,.html . --ignore-path .gitignore && prettier \"**/*.ts\" --check --ignore-path .gitignore",
     "format": "eslint --ext .ts,.html . --fix --ignore-path .gitignore && prettier \"**/*.ts\" --write --ignore-path .gitignore",
     "test": "tsc && wtr --coverage",
     "test:watch": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wtr --watch\""
   },
   "dependencies": {
-    "lit-html": "^1.1.2",
-    "lit-element": "^2.2.1"
+    "@juggle/resize-observer": "^3.3.0"
   },
   "devDependencies": {
-    "@web/dev-server": "^0.1.1",
-    "concurrently": "^5.3.0",
-    "typescript": "^4.1.3",
-    "tslib": "^2.0.3",
-    "eslint": "^6.1.0",
+    "@internetarchive/icon-audio": "^1.1.3",
+    "@internetarchive/icon-donate": "^1.1.3",
+    "@internetarchive/icon-ia-logo": "^1.1.3",
+    "@internetarchive/icon-images": "^1.1.3",
+    "@internetarchive/icon-software": "^1.1.3",
+    "@internetarchive/icon-texts": "^1.1.3",
+    "@internetarchive/icon-upload": "^1.1.3",
+    "@internetarchive/icon-user": "^1.1.3",
+    "@internetarchive/icon-video": "^1.1.3",
+    "@internetarchive/icon-web": "^1.1.3",
     "@open-wc/eslint-config": "^4.2.0",
-    "@typescript-eslint/parser": "^2.20.0",
+    "@open-wc/testing": "^2.0.0",
+    "@types/mocha": "^8.2.0",
+    "@types/resize-observer-browser": "^0.1.4",
     "@typescript-eslint/eslint-plugin": "^2.20.0",
-    "prettier": "^2.0.4",
+    "@typescript-eslint/parser": "^2.20.0",
+    "@web/dev-server": "^0.1.1",
+    "@web/test-runner": "^0.11.5",
+    "concurrently": "^5.3.0",
+    "eslint": "^6.1.0",
     "eslint-config-prettier": "^6.11.0",
     "husky": "^1.0.0",
     "lint-staged": "^10.0.0",
-    "@web/test-runner": "^0.11.5",
-    "@open-wc/testing": "^2.0.0"
+    "lit-element": "^2.4.0",
+    "lit-html": "^1.3.0",
+    "prettier": "^2.0.4",
+    "tslib": "^2.0.3",
+    "typedoc": "^0.20.15",
+    "typescript": "^4.1.3"
   },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
