Update dependencies and add mock resize observer for testing

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,9 +16,10 @@
     "rootDir": "./",
     "declaration": true,
     "types": [
-      "resize-observer-browser",
       "mocha"
     ],
   },
-  "include": ["**/*.ts"]
+  "include": [
+    "**/*.ts"
+  ]
 }
