--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@internetarchive/icon-web": "^1.3.2",
     "@open-wc/eslint-config": "^7.0.0",
     "@open-wc/testing": "^3.0.3",
+    "@open-wc/testing-helpers": "^2.0.2",
     "@types/mocha": "^8.2.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
