--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "husky": "^1.0.0",
     "lint-staged": "^10.0.0",
     "lit": "^2.0.2",
+    "lit-html": "^2.0.2",
     "prettier": "^2.0.4",
     "tslib": "^2.3.1",
     "typedoc": "^0.20.15",
