--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@internetarchive/shared-resize-observer",
-  "version": "0.0.1",
+  "version": "0.0.2-alpha.3",
   "description": "A shared ResizeObserver to allow for efficient element resize observations",
   "license": "AGPL-3.0-only",
   "main": "dist/index.js",
@@ -20,35 +20,35 @@
     "test:watch": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wtr --watch\""
   },
   "devDependencies": {
-    "@internetarchive/icon-audio": "^1.1.3",
-    "@internetarchive/icon-donate": "^1.1.3",
-    "@internetarchive/icon-ia-logo": "^1.1.3",
-    "@internetarchive/icon-images": "^1.1.3",
-    "@internetarchive/icon-software": "^1.1.3",
-    "@internetarchive/icon-texts": "^1.1.3",
-    "@internetarchive/icon-upload": "^1.1.3",
-    "@internetarchive/icon-user": "^1.1.3",
-    "@internetarchive/icon-video": "^1.1.3",
-    "@internetarchive/icon-web": "^1.1.3",
-    "@open-wc/eslint-config": "^4.2.0",
-    "@open-wc/testing": "^2.0.0",
+    "@internetarchive/icon-audio": "^1.3.2",
+    "@internetarchive/icon-donate": "^1.3.2",
+    "@internetarchive/icon-ia-logo": "^1.3.2",
+    "@internetarchive/icon-images": "^1.3.2",
+    "@internetarchive/icon-software": "^1.3.2",
+    "@internetarchive/icon-texts": "^1.3.2",
+    "@internetarchive/icon-upload": "^1.3.2",
+    "@internetarchive/icon-user": "^1.3.2",
+    "@internetarchive/icon-video": "^1.3.2",
+    "@internetarchive/icon-web": "^1.3.2",
+    "@open-wc/eslint-config": "^7.0.0",
+    "@open-wc/testing": "^3.0.3",
+    "@open-wc/testing-helpers": "^2.0.2",
     "@types/mocha": "^8.2.0",
-    "@types/resize-observer-browser": "^0.1.4",
-    "@typescript-eslint/eslint-plugin": "^2.20.0",
-    "@typescript-eslint/parser": "^2.20.0",
-    "@web/dev-server": "^0.1.1",
-    "@web/test-runner": "^0.11.5",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "@web/dev-server": "^0.1.28",
+    "@web/test-runner": "^0.13.22",
     "concurrently": "^5.3.0",
-    "eslint": "^6.1.0",
+    "eslint": "^8.2.0",
     "eslint-config-prettier": "^6.11.0",
     "husky": "^1.0.0",
     "lint-staged": "^10.0.0",
-    "lit-element": "^2.4.0",
-    "lit-html": "^1.3.0",
+    "lit": "^2.0.2",
+    "lit-html": "^2.0.2",
     "prettier": "^2.0.4",
-    "tslib": "^2.0.3",
+    "tslib": "^2.3.1",
     "typedoc": "^0.20.15",
-    "typescript": "^4.1.3"
+    "typescript": "^4.4.4"
   },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
