--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@internetarchive/shared-resize-observer",
-  "version": "0.0.2-alpha.3",
+  "version": "0.1.0",
   "description": "A shared ResizeObserver to allow for efficient element resize observations",
   "license": "AGPL-3.0-only",
   "main": "dist/index.js",
